@@ -24,6 +24,10 @@
     margin-top: 10px;
 }
 
+.results-tables {
+    padding: 0px !important;
+}
+
 .alert-danger, .alert-success, .alert-info {
     padding: 20px;
 }
