@@ -1,4 +1,7 @@
 ## 2020-4-29
+• Updated Error and Results section
+
+## 2020-4-29
 • Added Error, Success, and Results sections on Statement of Value Import and Fleet Schedule Comparison
 
 ## 2020-4-28
